<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Splash Screen -->
    <string name="splash_screen_name">AlterEgo</string>
    <string name="splash_screen_image">AlterEgo</string>
    
    <!--  App Name -->
    <string name="app_name">AlterEgo</string>

    <!-- Flip Pages Title -->
    <string name="title_character">Character</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_notes">Notes</string>
    <string name="title_chat">Chat</string>
    <string name="title_map">Map</string>


    <!-- Character -->
    <string name="nochar_tv">Create Character</string>
    <string name="nochar_button">Make New Character</string>
    <string name="char_name">Character Name</string>
    <string name="char_desc">Character Description</string>
    <string name="char_attributes">Character Attributes</string>
    <string name="new_stat_button">Add New Stat</string>

    <!-- Character Dialogue -->
    <string name="char_name_dial">Character Name</string>
    <string name="char_desc_dial">Character Description</string>

    <!-- Inventory -->
    <string name="inventory_list">View Inventory</string>
	<string name="inv_button">Add Item</string>
	
	<!-- Inventory Dialog -->
	<string name="item_name">Item Name</string>
	<string name="item_description">Item Description</string>
	
    <!-- Notes -->
    <string name="notes_list">View Notes</string>
    <string name="notes_add_notes">Add Note</string>

    <!-- Notes Dialogue -->
    <string name="notes_subject">Subject</string>
    <string name="notes_desc">Details</string>

    <!-- Database -->
    <string name="gameid">GAMEID</string>
    <string name="charid">CHARID</string>

    <!-- Dialogue Default Options -->
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!-- Default Menu -->
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="list_header">Games</string>
    <string name="main_new_game">Create New Game</string>
    <string name="main_game_list_view">View Inventory</string>

    <!-- Main Activity Menu -->
    <string name="action_new_game">Create New Game</string>

    <!-- Game Activity -->

    <!-- Game Activity Menu -->
    <string name="action_new_character">Create New Character</string>
	<string name="settings_info">To make more games from now on, use the menu button!</string>
    <!-- New Game Dialogue -->
    <string name="game_name">Game Name</string>
    <string name="hosting">Host Game?</string>

    <!-- Character Stats Dialog-->
    <string name="char_stat_name_hint">Stat Name</string>
    <string name="char_stat_val_hint">Stat Value</string>

    <!-- LongClick -->
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>

    <!-- Edit Dialogue -->

    <!-- Dialogue Default Optionmarker_enter_titles -->
    <string name="new_game_name">Edit Game</string>
    <string name="new_cancel">Cancel</string>
    <string name="new_edit">Edit</string>

    <!-- Map Fragment Stuff -->
    <string name="start_map_button">Start Map</string>
    
    <!-- Marker Dialogue -->
    <string name="add_marker_player">Player</string>
    <string name="add_marker_treasure">Treasure</string>
    <string name="add_marker_enemy">Enemy</string>
        
    <!-- Player Marker Dialogue -->
    <string name="marker_player_hint">Player Name</string>
    <string name="marker_player_snippet_hint">Player Descriptions</string>
    
    <!-- Treasure Marker Dialogue -->
    <string name="marker_treasure_hint">Treasure Title</string>
    <string name="marker_treasure_snippet_hint">Treasure Descriptions</string>
    
    <!-- Enemy Marker Dialogue -->
    <string name="marker_enemy_hint">Enemy Type/Name</string>
    <string name="marker_enemy_snippet_hint">Enemy Description</string>

    <!-- Networking Strings -->
    <string name="netservicename">Alter Ego Networking Service</string>
</resources>
