<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/character_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/nochar_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/nochar_tv"
            android:text="@string/nochar_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:longClickable="true"
            android:layout_weight="1"
            android:textSize="30sp" />
        
        <Button
            android:id="@+id/nochar_button"
            android:text="@string/nochar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="25sp" />
        </LinearLayout>
            
    <LinearLayout
        android:id="@+id/haschar_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:id="@+id/char_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_name" 
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/char_desc"
            android:lines="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_desc" />

        <ListView
            android:id="@+id/char_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_attributes" />

        <ListView
            android:id="@+id/char_stats"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/new_stat_button"
            android:text="@string/new_stat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>
